--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>Page Title</title>
 </head>
-<script>"./testing.js"</script>
+<script>"/testing.js"</script>
 <body>
 
 <h1>My First Heading</h1>
