--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
- <script>"/testing.js"</script>
+ <script src="/testing.js"></script>
 <title>Page Title</title>
 </head>
 <body>
