--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 
+ <a href="DestinyTwoStuff.html">Go to Destiny 2 stuff</a>
 <h1>My First Heading</h1>
 <p>My first paragraph.</p>
 
