--- a/DestinyTwoStuff.html
+++ b/DestinyTwoStuff.html
@@ -33,13 +33,13 @@ var configSettings = {
 	apiKey: '4e04440a43d34b23a4891f3164ef7d4d',  // <-- Add your Bungie API Key here.
 	authURL: 'https://www.bungie.net/en/OAuth/Authorize/33692', // <-- Add your Authorization URL here.
 	originHeader: 'https://vorpalbunnie.github.io/', // <-- Add your origin header value here.
-}
+};
 
 var baseRequest = request.defaults({headers: {'X-API-Key':configSettings.apiKey}});
 
 
 
-function UserAction(button) {
+function makeRequest(button) {
     var xhttp = new XMLHttpRequest();
     var URL = getURL(button);
     xhttp.open("GET", configSettings.authURL, true);
@@ -48,7 +48,7 @@ function UserAction(button) {
     testResult = xhttp;
     console.log(xhttp);
     document.getElementById("paragraph").innerHTML = xhttp.responseText;
-}
+};
 
 function getURL(button){
   switch(button){
@@ -56,10 +56,9 @@ function getURL(button){
       return "https://www.bungie.net/platform/Destiny/Manifest/InventoryItem/1274330687/";
     default:
      return "https://www.bungie.net/Platform/Destiny2/Stats/PostGameCarnageReport/6708842102/";
-  
-  }
+  };
 
-}
+};
 
 
 </script>
