--- a/DestinyTwoStuff.html
+++ b/DestinyTwoStuff.html
@@ -9,7 +9,7 @@
 <p id="paragraph"> Placeholder </p>
 
 <script>
-var request = require('request');
+//var request = require('request');
 
 var testResult;
 /**
