--- a/DestinyTwoStuff.html
+++ b/DestinyTwoStuff.html
@@ -32,10 +32,10 @@ xhr.send();
 var configSettings = {
 	apiKey: '4e04440a43d34b23a4891f3164ef7d4d',  // <-- Add your Bungie API Key here.
 	authURL: 'https://www.bungie.net/en/OAuth/Authorize/33692', // <-- Add your Authorization URL here.
-	originHeader: 'https://vorpalbunnie.github.io/', // <-- Add your origin header value here.
+	originHeader: 'https://vorpalbunnie.github.io/' // <-- Add your origin header value here.
 };
 
-var baseRequest = request.defaults({headers: {'X-API-Key':configSettings.apiKey}});
+//var baseRequest = request.defaults({headers: {'X-API-Key':configSettings.apiKey}});
 
 
 
