--- a/DestinyTwoStuff.html
+++ b/DestinyTwoStuff.html
@@ -40,14 +40,15 @@ var configSettings = {
 
 
 function makeRequest(button) {
-    var xhttp = new XMLHttpRequest();
-    var URL = getURL(button);
-    xhttp.open("GET", configSettings.authURL, true);
-    xhttp.setRequestHeader("Content-type", "application/json");
-    xhttp.send(null);
-    testResult = xhttp;
-    console.log(xhttp);
-    document.getElementById("paragraph").innerHTML = xhttp.responseText;
+	var xhttp = new XMLHttpRequest();
+	var URL = getURL(button);
+	xhttp.open("GET", URL, true);
+	xhttp.setRequestHeader('X-API-Key':configSettings.apiKey);
+	xhttp.setRequestHeader("Content-type", "application/json");
+	xhttp.send(null);
+	testResult = xhttp;
+	console.log(xhttp);
+	document.getElementById("paragraph").innerHTML = xhttp.responseText;
 };
 
 function getURL(button){
