--- a/DestinyTwoStuff.html
+++ b/DestinyTwoStuff.html
@@ -10,6 +10,11 @@
 		<button onclick=makeRequest("test-button") id="test-button">Push me bro</button>
 
 		<p id="paragraph"> Placeholder </p>
+		
+		<button onclick=manifestButton() id="json-manifest-button">Retrieve JSON Manifest</button>
+		
+		
+		<button onclick=manifestMobileButton() id="mobile-manifest-button">Retrieve Mobile Manifest</button>
 
 
 	</body>
